--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 1</title>
   <link rel="stylesheet" href="/src/index.css">
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background: #2c3e50;
+    background-image:
+      radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
+      radial-gradient(circle at 80% 20%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
+      linear-gradient(45deg, #34495e 25%, transparent 25%),
+      linear-gradient(-45deg, #34495e 25%, transparent 25%),
+      linear-gradient(45deg, transparent 75%, #34495e 75%),
+      linear-gradient(-45deg, transparent 75%, #34495e 75%);
+    background-size: 100% 100%, 100% 100%, 40px 40px, 40px 40px, 40px 40px, 40px 40px;
+    background-position: 0 0, 0 0, 20px 20px, 20px 20px, 20px 20px, 20px 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+</style>
 </head>
 <body>
   <div id="root"></div>
